Colored scales n stuff

--- a/src/menuStyles.scss
+++ b/src/menuStyles.scss
@@ -12,8 +12,8 @@ $text-color: #222;
 	font: $font-stack;
 	color: $text-color;
 
-	width: 80px;
-	height: 80px;
+	width: 5vh;
+	height: 5vh;
 	margin: 16px;
 
 	font-size: 80px;
