--- a/src/menuStyles.scss
+++ b/src/menuStyles.scss
@@ -115,68 +115,94 @@ $text-color: #222;
 	display: flex;
 	flex-direction: row;
 
-	// justify-content: center;
-
-	flex-grow: 0;
-	overflow: hidden;
-
 	border-radius: 16px;
-	user-select: none;
-}
-
-.rudder > .label {
-	display: flex;
-	justify-content: center;
-
-    position: relative;
-
+	// justify-content: center;
 	background-color: $background-color;
 
-	flex-grow: 3;
-	height: 60px;
+	flex-grow: 0;
+	flex-shrink: 0;
+	overflow: hidden;
 
-	padding: 8px;
-}
+	user-select: none;
 
-.rudder > .label > div {
-    position: absolute;
+	.label {
+		display: flex;
+		flex-direction: column;
 
-	font-size: 50px;
-	color: #FFF;
+		justify-content: center;
 
-	width: 100%;
-	vertical-align: center;
+	    position: relative;
 
-	text-align: center;
-	white-space: nowrap;
-}
+		background-color: transparent;
 
-.rudder > .button {
-	display: flex;
-	flex-grow: 1;
-	// width: 20vw;
-	// height: 40vw;
-	// flex-shrink: 1;
-	// flex-grow: 1;
-}
+		width: 40%;
+		// flex-grow: 1;
+		// height: 60px;
 
-.rudder > .button > div {
-	flex-grow: 1;
-	flex-shrink: 1;
+		padding: 8px;
 
-	margin: 16px;
-    width: auto;
-    height: auto;
-    position: relative;
-	// max-height: 100%;
-	// width: auto;
-}
+		.labelName {
 
-.rudder > .button > div > img {
-    position: absolute;
-    object-fit: contain;
-    height: 100%;
-    width: auto;
-	// max-height: 100%;
-	// width: auto;
+			font-size: 18px;
+			color: #FFF;
+
+			width: 100%;
+			vertical-align: center;
+
+			text-align: center;
+			white-space: nowrap;
+		}
+
+		.labelValue {
+			font-size: 36px;
+			color: #FFF;
+
+			width: 100%;
+			vertical-align: center;
+
+			text-align: center;
+			white-space: nowrap;
+		}
+	}
+
+	.buttons {
+		display: flex;
+		border-radius: 16px;
+		flex-direction: row;
+
+		margin: 5px;
+		overflow: hidden;
+		flex-grow: 1;
+		flex-shrink: 1;
+
+		.button {
+			display: flex;
+			flex-grow: 1;
+			// width: 20vw;
+			// height: 40vw;
+			// flex-shrink: 1;
+			// flex-grow: 1;
+
+			div {
+				flex-grow: 1;
+				flex-shrink: 1;
+
+				margin: 10px;
+			    width: auto;
+			    height: auto;
+			    position: relative;
+				// max-height: 100%;
+				// width: auto;
+
+				img {
+				    position: absolute;
+				    object-fit: contain;
+				    height: 100%;
+				    width: auto;
+					// max-height: 100%;
+					// width: auto;
+				}
+			}
+		}
+	}
 }
