--- a/src/menuStyles.scss
+++ b/src/menuStyles.scss
@@ -12,14 +12,18 @@ $text-color: #222;
 	font: $font-stack;
 	color: $text-color;
 
-	width: 5vh;
-	height: 5vh;
+	width: 5vmin;
+	height: 5vmin;
 	margin-top: 8px;
 	margin-left: 8px;
 
 	font-size: 80px;
 
-	opacity: 0.5;
+	opacity: 0.8;
+
+	border: 1px solid black;
+	border-radius: 1vmin;
+	padding: 1vmin;
 
 	text-align: center;
 	cursor: pointer;
@@ -28,6 +32,7 @@ $text-color: #222;
 	// background-size: cover;
 
 	display: flex;
+	// transition: 0.2s;
 
 	div {
 		flex-grow: 1;
@@ -53,6 +58,7 @@ $text-color: #222;
 
 .openButton:hover {
 	opacity: 1;
+	background-color: #FFF;
 }
 
 .closeButton {
@@ -62,18 +68,25 @@ $text-color: #222;
 }
 
 .menuContainer {
+	z-index: 10;
+
 	pointer-events: none;
-	position: fixed;
+	position: absolute;
 
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
+
+	display: flex;
+	flex-direction: column;
 }
 
 .menu {
+	z-index: 10;
+
 	pointer-events: auto;
 
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 
 	font: $font-stack;
 	color: $text-color;
@@ -84,6 +97,7 @@ $text-color: #222;
 	flex-direction: column;
 
 	flex-shrink: 0;
+	flex-grow: 1;
 
 	.button {
 		cursor: pointer;
@@ -107,6 +121,30 @@ $text-color: #222;
 .menu > div {
 	// margin: 4px;
 	// height: 32px;
+}
+
+.blurb {
+	color: #FFF;
+	margin: 8px;
+
+	display: flex;
+	flex-direction: column;
+
+	border-radius: 16px;
+	// justify-content: center;
+	background-color: $background-color;
+
+	flex-grow: 0;
+	flex-shrink: 0;
+	overflow: hidden;
+
+	padding: 8px;
+	user-select: none;
+	// text-align: center;
+	font-size: 20px;
+}
+.blurb > div {
+	margin: 8px;
 }
 
 .rudder {
